# civic-access-navigator

./: .gitignore  AGENTS.md  BUSINESS_CASE.md  CAPSTONE_SPEC.md  CODEX_SETUP.md  DEMO_SCRIPT.md  ONBOARDING_AGENT.md  PEACETECH_ALIGNMENT.md  PITCH.md  PROJECT_PLAN.md  README.md  STATUS.md  TODO.md  pyproject.toml  render.yaml
.codex/: README.md  config.toml
backend/: requirements.txt
backend/app/: config.py  db.py  health.py  main.py  models.py  routes.py
backend/app/services/: chat_service.py  evaluation_service.py  resource_admin_service.py  resource_service.py  sms_service.py  ussd_service.py  workflow_db_service.py
backend/static/: admin-chat-records.html  admin-index.html  admin-resources.html  admin-sms.html  admin-sos-requests.html  admin-ussd.html  admin-workflow-reports.html  app.js  i18n.js  index.html  styles.css
data/: README.md
data/curated/: can_faq.json  can_knowledge_base.json  incident_workflow_catalog.json  osf_kenya_africa_sources.json  voice_accountability_documents.json
data/samples/: resources.json
docs/: README.md  architecture-diagram.md  architecture.md  chat-faq.md  project-proposal.md  roadmap.md  submission-outline.md
notes/: prompt-notes.md  research-notes.md
src/onboarding_agent/: __init__.py  __main__.py  asker.py  cli.py  mapper.py
tests/: test_health.py  test_health_status.py  test_onboarding_agent.py
